--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,37 @@ Thumbs.db
 # Misc
 *.db
 *.sqlite3
-node_modules/ 
+
+# Frontend
+# Dependencies
+node_modules/
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Next.js
+/.next/
+/out/
+.next/
+out/
+
+# Production
+/build
+/dist
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env*.local
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts 
