--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-scikit-learn==1.2.2
-joblib==1.3.2
-numpy==1.24.3
-pydantic==2.4.2 
+annotated-types==0.7.0
+anyio==4.9.0
+click==8.1.8
+exceptiongroup==1.3.0
+fastapi==0.115.12
+h11==0.16.0
+idna==3.10
+joblib==1.5.1
+numpy==2.0.2
+pydantic==2.11.5
+pydantic_core==2.33.2
+scikit-learn==1.6.1
+scipy==1.13.1
+sniffio==1.3.1
+starlette==0.46.2
+threadpoolctl==3.6.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+uvicorn==0.34.3
