--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 models/random_forest_sentiment_model.joblib filter=lfs diff=lfs merge=lfs -text
+models/random_forest_sentiment_model.pkl filter=lfs diff=lfs merge=lfs -text
